--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -44,6 +44,7 @@
     <string name="set_PIN">Назначить PIN</string>
     <string name="change_PIN">Сменить PIN</string>
     <string name="delete_PIN">Удалить PIN</string>
+    <string name="enableBio">Вход по биометрии</string>
     <string name="enter_PIN">Введите PIN</string>
     <string name="enter_old_PIN">Введите старый PIN</string>
     <string name="enter_PIN1">Введите новый PIN</string>
@@ -53,8 +54,12 @@
     <string name="PIN_deleted">PIN удалён</string>
     <string name="PIN_cancel">Ввод PIN отменён</string>
     <string name="PIN_bad">Введён неверный действующий PIN</string>
+    <string name="Bio">Биометрическая аутентификация</string>
+    <string name="use_FingerPrint">Используйте отпечаток пальца для аутентификации</string>
+    <string name="Bio_error">Ошибка биометрии</string>
     <string name="PIN_new_bad">Новый PIN нужно ввести одинаково два раза</string>
-    <string name="PIN_login">Вход по PIN-коду</string>
+    <string name="PIN_BIO_login">Вход по PIN-коду или биометрии</string>
+    <string name="FingerPrint_login">Вход по отпечатку пальца</string>
     <string name="progress_indicator">Индикатор прогресса</string>
     <string name="remaining">Осталось</string>
     <string name="passed">Прошло</string>
