--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -54,8 +54,8 @@
     <string name="PIN_deleted">PIN удалён</string>
     <string name="PIN_cancel">Ввод PIN отменён</string>
     <string name="PIN_bad">Введён неверный действующий PIN</string>
-    <string name="Bio">Биометрическая аутентификация</string>
-    <string name="use_FingerPrint">Используйте отпечаток пальца для аутентификации</string>
+    <string name="Bio_login">Вход в генератор TOTP</string>
+    <string name="use_FingerPrint">Отсканируйте отпечаток пальца</string>
     <string name="Bio_error">Ошибка биометрии</string>
     <string name="PIN_new_bad">Новый PIN нужно ввести одинаково два раза</string>
     <string name="PIN_BIO_login">Вход по PIN-коду или биометрии</string>
@@ -63,4 +63,8 @@
     <string name="progress_indicator">Индикатор прогресса</string>
     <string name="remaining">Осталось</string>
     <string name="passed">Прошло</string>
+    <string name="selectThemeMode">Выбрать режим темы</string>
+    <string name="themeDay">День</string>
+    <string name="themeSystem">Система</string>
+    <string name="themeNight">Ночь</string>
 </resources>
