--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="description">Time-Based One-Time
         \nPassword generator</string>
     <string name="version">Версия:</string>
-    <string name="for_about">Author: Andrey Yakovlev © 2025
+    <string name="for_about">Andrey Yakovlev © 2025-2026
         \nhttps://github.com/mammoth70</string>
 
     <string name="ok">OK</string>
