--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="description">Генератор одноразовых паролей
         \nна основе времени</string>
     <string name="version">Версия:</string>
-    <string name="for_about">Автор: Андрей Яковлев © 2025
+    <string name="for_about">Андрей Яковлев © 2025-2026
         \nhttps://github.com/mammoth70</string>
 
     <string name="ok">OK</string>
