--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,24 +22,24 @@
     <string name="title_settings">Настройки</string>
     <string name="about">инфо</string>
     <string name="title_about">О программе</string>
-    <string name="add_key">Добавить ключ</string>
-    <string name="delete_key">Удалить ключ</string>
-    <string name="key_added">Ключ успешно добавлен</string>
-    <string name="key_deleted">Ключ удалён</string>
-    <string name="key_add_error">Ошибка добавления ключа</string>
-    <string name="key_delete_error">Ошибка удаления ключа</string>
+    <string name="add_secret">Добавить секрет</string>
+    <string name="delete_secret">Удалить секрет</string>
+    <string name="secret_added">Секрет успешно добавлен</string>
+    <string name="secret_deleted">Секрет удалён</string>
+    <string name="secret_add_error">Ошибка добавления секрета</string>
+    <string name="secret_delete_error">Ошибка удаления секрета</string>
     <string name="qr_error">Ошибка сканера QR</string>
     <string name="qr_code_error">QR не разобран</string>
-    <string name="view_key">Карточка ключа</string>
+    <string name="view_secret">Карточка секрета</string>
     <string name="ed_label">Метка</string>
-    <string name="ed_key">Ключ (base32)</string>
+    <string name="ed_secret">Секрет (base32)</string>
     <string name="hash">Хэш-функция</string>
     <string name="period">Период сек.</string>
     <string name="digits">Разрядов</string>
     <string name="err_empty_label">Нужно ввести название</string>
     <string name="err_not_unique_label">Название должно быть уникальным</string>
-    <string name="err_empty_key">Нужно ввести ключ</string>
-    <string name="err_base32_key">Ключ не в формате Base32</string>
+    <string name="err_empty_secret">Нужно ввести секрет</string>
+    <string name="err_base32_secret">Секрет не в формате Base32</string>
     <string name="err_empty_period">Нужно ввести период</string>
     <string name="token_to_clipboard">Токен скопирован в буфер обмена</string>
     <string name="set_PIN">Назначить PIN</string>
