--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,24 +22,24 @@
     <string name="title_settings">Settings</string>
     <string name="about">about</string>
     <string name="title_about">About</string>
-    <string name="add_key">Add key</string>
-    <string name="delete_key">Delete key</string>
-    <string name="key_added">The key has been added successfully.</string>
-    <string name="key_deleted">The key has been removed.</string>
-    <string name="key_add_error">Error adding key</string>
-    <string name="key_delete_error">Error deleting key</string>
+    <string name="add_secret">Add secret</string>
+    <string name="delete_secret">Delete secret</string>
+    <string name="secret_added">The secret has been added successfully.</string>
+    <string name="secret_deleted">The secret has been removed.</string>
+    <string name="secret_add_error">Error adding secret</string>
+    <string name="secret_delete_error">Error deleting secret</string>
     <string name="qr_error">QR scanner error</string>
     <string name="qr_code_error">The QR code is not parsed</string>
-    <string name="view_key">View key</string>
+    <string name="view_secret">View secret</string>
     <string name="ed_label">Label</string>
-    <string name="ed_key">Key (base32)</string>
+    <string name="ed_secret">Secret (base32)</string>
     <string name="hash">Hash</string>
     <string name="period">Period s.</string>
     <string name="digits">Digits</string>
     <string name="err_empty_label">You must enter a name</string>
     <string name="err_not_unique_label">The name should be a recognition</string>
-    <string name="err_empty_key">You must enter a key</string>
-    <string name="err_base32_key">Invalid Base32 key</string>
+    <string name="err_empty_secret">You must enter a secret</string>
+    <string name="err_base32_secret">Invalid Base32 secret</string>
     <string name="err_empty_period">You must enter a period</string>
     <string name="token_to_clipboard">The token has been copied to the clipboard</string>
     <string name="set_PIN">Set PIN</string>
