--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -61,7 +61,9 @@
     <string name="PIN_new_bad">Новый PIN нужно ввести одинаково два раза</string>
     <string name="PIN_BIO_login">Вход по PIN-коду или биометрии</string>
     <string name="FingerPrint_login">Вход по отпечатку пальца</string>
+    <string name="TokensGeneration">Генерация токенов</string>
     <string name="enableNextToken">Показывать следующий токен</string>
+    <string name="timeShift">Сдвиг времени (сек.)</string>
     <string name="progress_indicator">Индикатор прогресса</string>
     <string name="remaining">Осталось</string>
     <string name="passed">Прошло</string>
