--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="view">View</string>
     <string name="save">Save</string>
     <string name="menu">Menu</string>
+    <string name="back">Back</string>
+    <string name="exit">Exit</string>
     <string name="settings">settings</string>
     <string name="title_settings">Settings</string>
     <string name="about">about</string>
