--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,6 +6,7 @@
     <string name="for_about">Андрей Яковлев © 2025–2026\nhttps://github.com/mammoth70</string>
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
+    <string name="next">Далее</string>
     <string name="backspace">Backspace</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
@@ -22,55 +23,83 @@
     <string name="unknown_error">Неизвестная ошибка</string>
     <string name="settings">настройки</string>
     <string name="title_settings">Настройки</string>
+    <string name="title_export">Экспорт</string>
+    <string name="title_import">Импорт</string>
+    <string name="export_file_protection">Защита файла экспорта</string>
+    <string name="export_file_protection_text">Введите пароль для шифрования. Без него восстановить данные будет невозможно.</string>
+    <string name="import_file_protection">Защита файла импорта</string>
+    <string name="import_file_protection_text">Введите пароль, чтобы расшифровать и восстановить ваши данные.</string>
+    <string name="create_password">Придумайте пароль</string>
+    <string name="confirm_password">Повторите пароль</string>
+    <string name="enter_password">Введите пароль</string>
+    <string name="error_password_min_length">Минимум 8 символов</string>
+    <string name="error_passwords_mismatch">Пароли не совпадают</string>
+    <string name="error_password_required">Требуется пароль</string>
+    <string name="no_encrypting">Без шифрования</string>
+    <string name="encrypting">Шифрование…</string>
+    <string name="select_item">Сначала выберите хотя бы один элемент для экспорта</string>
+    <string name="export_success">Экспорт успешно выполнен</string>
+    <string name="error_io_stream">Не удалось открыть файл для записи</string>
+    <string name="select_all">Выбрать всё</string>
+    <string name="deselect_all">Снять всё</string>
     <string name="about">инфо</string>
     <string name="title_about">О программе</string>
     <string name="add_secret">Добавить секрет</string>
     <string name="delete_secret">Удалить секрет</string>
     <string name="secret_added">Секрет успешно добавлен</string>
+    <string name="secrets_added">Все секреты успешно добавлены</string>
     <string name="secret_deleted">Секрет удалён</string>
     <string name="secret_add_error">Ошибка добавления секрета</string>
+    <string name="secrets_add_error">Ошибка добавления всех секретов</string>
+    <string name="add_partial_success">Добавлено секретов: %1$d, ошибок: %2$d</string>
     <string name="secret_delete_error">Ошибка удаления секрета</string>
+    <string name="loading_decrypting">Расшифровка данных…</string>
+    <string name="incorrect_password_error">Неверный пароль</string>
+    <string name="invalid_file_format_error">Неверный формат файла</string>
+    <string name="import_failed_error">Ошибка импорта</string>
+    <string name="error_detail">Ошибка: %s</string>
     <string name="qr_error">Ошибка сканера QR</string>
     <string name="qr_code_error">QR не разобран</string>
+    <string name="json_error">JSON не разобран</string>
     <string name="view_secret">Карточка секрета</string>
     <string name="ed_label">Метка</string>
     <string name="ed_secret">Секрет (base32)</string>
     <string name="hash">Хэш-функция</string>
     <string name="period">Период сек.</string>
     <string name="digits">Разрядов</string>
-    <string name="err_empty_label">Нужно ввести название</string>
-    <string name="err_not_unique_label">Название должно быть уникальным</string>
-    <string name="err_empty_secret">Нужно ввести секрет</string>
-    <string name="err_base32_secret">Секрет не в формате Base32</string>
-    <string name="err_empty_period">Нужно ввести период</string>
+    <string name="empty_label_error">Нужно ввести название</string>
+    <string name="not_unique_label_error">Название должно быть уникальным</string>
+    <string name="empty_secret_error">Нужно ввести секрет</string>
+    <string name="base32_secret_error">Секрет не в формате Base32</string>
+    <string name="empty_period_error">Нужно ввести период</string>
     <string name="token_to_clipboard">Токен скопирован в буфер обмена</string>
-    <string name="set_PIN">Назначить PIN</string>
-    <string name="change_PIN">Сменить PIN</string>
-    <string name="delete_PIN">Удалить PIN</string>
-    <string name="enableBio">Вход по биометрии</string>
-    <string name="enter_PIN">Введите PIN</string>
-    <string name="enter_old_PIN">Введите старый PIN</string>
-    <string name="enter_PIN1">Введите новый PIN</string>
-    <string name="enter_PIN2">Введите PIN ещё раз</string>
-    <string name="error_PIN">Неверный PIN</string>
-    <string name="PIN_changed">PIN успешно сменён</string>
-    <string name="PIN_deleted">PIN удалён</string>
-    <string name="PIN_cancel">Ввод PIN отменён</string>
-    <string name="PIN_bad">Введён неверный действующий PIN</string>
-    <string name="Bio_login">Вход в генератор TOTP</string>
-    <string name="use_FingerPrint">Отсканируйте отпечаток пальца</string>
-    <string name="Bio_error">Ошибка биометрии</string>
-    <string name="PIN_new_bad">Новый PIN нужно ввести одинаково два раза</string>
-    <string name="PIN_BIO_login">Вход по PIN-коду или биометрии</string>
-    <string name="FingerPrint_login">Вход по отпечатку пальца</string>
-    <string name="TokensGeneration">Генерация токенов</string>
-    <string name="enableNextToken">Показывать следующий токен</string>
-    <string name="timeShift">Сдвиг времени (сек.)</string>
+    <string name="set_pin">Назначить PIN</string>
+    <string name="change_pin">Сменить PIN</string>
+    <string name="delete_pin">Удалить PIN</string>
+    <string name="enable_bio">Вход по биометрии</string>
+    <string name="enter_pin">Введите PIN</string>
+    <string name="enter_old_pin">Введите старый PIN</string>
+    <string name="enter_new_pin">Введите новый PIN</string>
+    <string name="enter_pin_confirm">Введите PIN ещё раз</string>
+    <string name="pin_error">Неверный PIN</string>
+    <string name="pin_changed">PIN успешно сменён</string>
+    <string name="pin_deleted">PIN удалён</string>
+    <string name="pin_cancel">Ввод PIN отменён</string>
+    <string name="pin_bad">Введён неверный действующий PIN</string>
+    <string name="bio_login">Вход в генератор TOTP</string>
+    <string name="use_fingerprint">Отсканируйте отпечаток пальца</string>
+    <string name="bio_error">Ошибка биометрии</string>
+    <string name="pin_new_bad">Новый PIN нужно ввести одинаково два раза</string>
+    <string name="pin_bio_login">Вход по PIN-коду или биометрии</string>
+    <string name="fingerprint_login">Вход по отпечатку пальца</string>
+    <string name="tokens_generation">Генерация токенов</string>
+    <string name="enable_next_token">Показывать следующий токен</string>
+    <string name="time_shift">Сдвиг времени (сек.)</string>
     <string name="progress_indicator">Индикатор прогресса</string>
     <string name="remaining">Осталось</string>
     <string name="passed">Прошло</string>
-    <string name="selectThemeMode">Выбрать режим темы</string>
-    <string name="themeDay">День</string>
-    <string name="themeSystem">Система</string>
-    <string name="themeNight">Ночь</string>
+    <string name="select_theme_mode">Выбрать режим темы</string>
+    <string name="theme_day">День</string>
+    <string name="theme_system">Система</string>
+    <string name="theme_night">Ночь</string>
 </resources>
