--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="for_about">Andrey Yakovlev © 2025–2026\nhttps://github.com/mammoth70</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="next">Continue</string>
     <string name="backspace">Backspace</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
@@ -22,57 +23,85 @@
     <string name="unknown_error">Unknown error</string>
     <string name="settings">settings</string>
     <string name="title_settings">Settings</string>
+    <string name="title_export">Export</string>
+    <string name="title_import">Import</string>
+    <string name="export_file_protection">Export File Protection</string>
+    <string name="export_file_protection_text">Set an encryption password. Your data cannot be recovered without it.</string>
+    <string name="import_file_protection">Import File Protection</string>
+    <string name="import_file_protection_text">Enter the password to decrypt and restore your data.</string>
+    <string name="create_password">Create password</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="enter_password">Enter password</string>
+    <string name="error_password_min_length">At least 8 characters</string>
+    <string name="error_passwords_mismatch">Passwords don\'t match</string>
+    <string name="error_password_required">Password required</string>
+    <string name="no_encrypting">No Encryption</string>
+    <string name="encrypting">Encrypting…</string>
+    <string name="select_item">Select at least one item to continue</string>
+    <string name="export_success">Export successful</string>
+    <string name="error_io_stream">Could not open file for writing</string>
+    <string name="select_all">Select all</string>
+    <string name="deselect_all">Deselect all</string>
     <string name="about">about</string>
     <string name="title_about">About</string>
     <string name="add_secret">Add secret</string>
     <string name="delete_secret">Delete secret</string>
-    <string name="secret_added">The secret has been added successfully.</string>
-    <string name="secret_deleted">The secret has been removed.</string>
+    <string name="secret_added">The secret has been added successfully</string>
+    <string name="secrets_added">All secrets has been added successfully</string>
+    <string name="secret_deleted">The secret has been removed</string>
     <string name="secret_add_error">Error adding secret</string>
+    <string name="secrets_add_error">Error adding all secrets</string>
+    <string name="add_partial_success">Secrets added: %1$d, errors: %2$d</string>
     <string name="secret_delete_error">Error deleting secret</string>
+    <string name="loading_decrypting">Decrypting data…</string>
+    <string name="incorrect_password_error">Incorrect password</string>
+    <string name="invalid_file_format_error">Invalid file format</string>
+    <string name="import_failed_error">Import failed</string>
+    <string name="error_detail">Error: %s</string>
     <string name="qr_error">QR scanner error</string>
     <string name="qr_code_error">The QR code is not parsed</string>
+    <string name="json_error">The JSON is not parsed</string>
     <string name="view_secret">View secret</string>
     <string name="ed_label">Label</string>
     <string name="ed_secret">Secret (base32)</string>
     <string name="hash">Hash</string>
     <string name="period">Period s.</string>
     <string name="digits">Digits</string>
-    <string name="err_empty_label">You must enter a name</string>
-    <string name="err_not_unique_label">The name should be a recognition</string>
-    <string name="err_empty_secret">You must enter a secret</string>
-    <string name="err_base32_secret">Invalid Base32 secret</string>
-    <string name="err_empty_period">You must enter a period</string>
+    <string name="empty_label_error">You must enter a name</string>
+    <string name="not_unique_label_error">The name should be a recognition</string>
+    <string name="empty_secret_error">You must enter a secret</string>
+    <string name="base32_secret_error">Invalid Base32 secret</string>
+    <string name="empty_period_error">You must enter a period</string>
     <string name="token_to_clipboard">The token has been copied to the clipboard</string>
-    <string name="set_PIN">Set PIN</string>
-    <string name="change_PIN">Change PIN</string>
-    <string name="delete_PIN">Delete PIN</string>
-    <string name="enableBio">Biometric login</string>
-    <string name="enter_PIN">Enter the PIN</string>
-    <string name="enter_old_PIN">Enter your old PIN</string>
-    <string name="enter_PIN1">Enter new PIN</string>
-    <string name="enter_PIN2">Enter new PIN again</string>
-    <string name="error_PIN">Incorrect PIN</string>
-    <string name="PIN_changed">PIN has been successfully changed</string>
-    <string name="PIN_deleted">PIN has been deleted</string>
-    <string name="PIN_cancel">PIN entry has been cancelled</string>
-    <string name="Bio_login">Login to TOTP generator</string>
-    <string name="use_FingerPrint">Scan your fingerprint</string>
-    <string name="PIN_bad">Incorrect PIN entered</string>
-    <string name="Bio_error">Biometric error</string>
-    <string name="PIN_new_bad">The new PIN must be entered twice</string>
-    <string name="PIN_BIO_login">Login with PIN or biometrics</string>
-    <string name="FingerPrint_login">Fingerprint login</string>
-    <string name="TokensGeneration">Tokens Generation</string>
-    <string name="enableNextToken">Show next token</string>
-    <string name="timeShift">Time shift (c.)</string>
+    <string name="set_pin">Set PIN</string>
+    <string name="change_pin">Change PIN</string>
+    <string name="delete_pin">Delete PIN</string>
+    <string name="enable_bio">Biometric login</string>
+    <string name="enter_pin">Enter the PIN</string>
+    <string name="enter_old_pin">Enter your old PIN</string>
+    <string name="enter_new_pin">Enter new PIN</string>
+    <string name="enter_pin_confirm">Enter new PIN again</string>
+    <string name="pin_error">Incorrect PIN</string>
+    <string name="pin_changed">PIN has been successfully changed</string>
+    <string name="pin_deleted">PIN has been deleted</string>
+    <string name="pin_cancel">PIN entry has been cancelled</string>
+    <string name="bio_login">Login to TOTP generator</string>
+    <string name="use_fingerprint">Scan your fingerprint</string>
+    <string name="pin_bad">Incorrect PIN entered</string>
+    <string name="bio_error">Biometric error</string>
+    <string name="pin_new_bad">The new PIN must be entered twice</string>
+    <string name="pin_bio_login">Login with PIN or biometrics</string>
+    <string name="fingerprint_login">Fingerprint login</string>
+    <string name="tokens_generation">Tokens Generation</string>
+    <string name="enable_next_token">Show next token</string>
+    <string name="time_shift">Time shift (c.)</string>
     <string name="progress_indicator">Progress indicator</string>
     <string name="remaining">Remaining</string>
     <string name="passed">Passed</string>
-    <string name="selectThemeMode">Select theme mode</string>
-    <string name="themeDay">Day</string>
-    <string name="themeSystem">System</string>
-    <string name="themeNight">Night</string>
+    <string name="select_theme_mode">Select theme mode</string>
+    <string name="theme_day">Day</string>
+    <string name="theme_system">System</string>
+    <string name="theme_night">Night</string>
 
     <string name="sha1" translatable="false">SHA1</string>
     <string name="sha256" translatable="false">SHA256</string>
