--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="next">Continue</string>
+    <string name="done">Done</string>
     <string name="backspace">Backspace</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
@@ -24,7 +25,10 @@
     <string name="settings">settings</string>
     <string name="title_settings">Settings</string>
     <string name="title_export">Export</string>
+    <string name="title_export_json">Export to JSON</string>
+    <string name="title_export_qr">Export to QR</string>
     <string name="title_import">Import</string>
+    <string name="qr_scan_hint">Scan to import accounts to another device</string>
     <string name="export_file_protection">Export File Protection</string>
     <string name="export_file_protection_text">Set an encryption password. Your data cannot be recovered without it.</string>
     <string name="import_file_protection">Import File Protection</string>
@@ -37,7 +41,8 @@
     <string name="error_password_required">Password required</string>
     <string name="no_encrypting">No Encryption</string>
     <string name="encrypting">Encrypting…</string>
-    <string name="select_item">Select at least one item to continue</string>
+    <string name="select_item_error">Select at least one item to continue</string>
+    <string name="select_items_error">There should not be more than ten elements for export</string>
     <string name="export_success">Export successful</string>
     <string name="error_io_stream">Could not open file for writing</string>
     <string name="select_all">Select all</string>
